fixing data-caption not showing on smaller screen

--- a/css/baguetteBox.css
+++ b/css/baguetteBox.css
@@ -34,7 +34,7 @@
       display: inline-block;
       width: auto;
       height: auto;
-      max-height: 100%;
+      max-height: 95%;
       max-width: 100%;
       vertical-align: middle;
       -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
